fix nav that added a gap somehow

--- a/src/components/NewIn/NewIn.scss
+++ b/src/components/NewIn/NewIn.scss
@@ -1,3 +1,7 @@
 @use '../../styles/partials/globals';
 @use '../../styles/partials/variables' as *;
 @use '../../styles/partials/mixins' as *;
+
+.image__flex-container {
+  gap: 0.2rem;
+}
